[package]
name = "rd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
clap = { version = "4.1.6", features = ["derive"] }
rand = "0.8.5"
uuid = { version = "1.3.0", features = ["v4"] }
